[package]
name = "jwt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
jsonwebtoken = "9.2.0"
serde = {version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
