[package]
name = "jwt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = {version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
warp = "0.3.6"
